--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
     <div class="container">
         <section>
             <div class="card">
-                <img src="./photo_2024-08-27_17-37-36.jpg" alt="">
+                <img src="image/photo_2024-08-27_17-37-36.jpg"">
                 <h3>Lielie</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima, dolore totam quae sapiente libero, voluptatum laborum rem, omnis nihil veniam dignissimos. Aperiam obcaecati, at atque minus consequuntur asperiores neque ipsa.</p>
             </div>
             <div class="card">
-                <img src="./photo_2024-08-27_17-37-36.jpg" alt="">
+                <img src="image/photo_2024-08-27_17-37-36.jpg" alt="">
                 <h3>Lalaa</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima, dolore totam quae sapiente libero, voluptatum laborum rem, omnis nihil veniam dignissimos. Aperiam obcaecati, at atque minus consequuntur asperiores neque ipsa.</p>
             </div>
             <div class="card">
-                <img src="./photo_2024-08-27_17-37-36.jpg" alt="">
+                <img src="image/photo_2024-08-27_17-37-36.jpg" alt="">
                 <h3>Luluuu</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima, dolore totam quae sapiente libero, voluptatum laborum rem, omnis nihil veniam dignissimos. Aperiam obcaecati, at atque minus consequuntur asperiores neque ipsa.</p>
             </div>
